vpc.yml
# Create a VPC with:
#   2 Public Subnets
#   2 Private Subnets
#   An Internet Gateway (with routes to it for Public Subnets)
#   A NAT Gateway for outbound access (with routes from Private Subnets set to use it)

Description: This deploys a VPC, with a pair of public and private subnets spread
  across two Availability Zones. It deploys an internet gateway, with a default
  route on the public subnets. It deploys a pair of NAT gateways (one in each AZ),
  and default routes for them in the private subnets.

Parameters:
  EnvironmentName:
    Description: environment is prefixed to resource names
    Type: String

  VpcCIDR:
    Description: VPC polystudent-vpc-boto
    Type: String
    Default: 10.0.0.0/16

  PublicSubnet1CIDR:
    Description: public subnet in Availability Zone 1
    Type: String
    Default: 10.0.0.0/24

  PublicSubnet2CIDR:
    Description: public subnet in Availability Zone 2
    Type: String
    Default: 10.0.16.0/24

  PrivateSubnet1CIDR:
    Description: private subnet in Availability Zone 1
    Type: String
    Default: 10.0.128.0/24

  PrivateSubnet2CIDR:
    Description: private subnet in Availability Zone 2
    Type: String
    Default: 10.0.144.0/24

  LabRole:
    Description: Name of the IAM instance profile to attach to EC2 instances
    Type: String
    Default: LabInstanceProfile

  FlowLogsBucketName:
    Description: S3 bucket where VPC Flow Logs will be sent
    Type: String
    Default: polystudents3-tp4-1962292

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName
  
  # LabInstanceProfile:
  #   Type: AWS::IAM::InstanceProfile
  #   Properties:
  #     InstanceProfileName: LabRole
  #     Roles:
  #       - LabRole

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs "" ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs "" ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Routes

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Routes (AZ1)

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Routes (AZ2)

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  IngressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "polystudent-sg"
      GroupDescription: "Security group allows SSH, HTTP, HTTPS, MSSQL, etc..."
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0     # SSH

        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0     # HTTP

        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0     # HTTPS

        - IpProtocol: tcp
          FromPort: 53
          ToPort: 53
          CidrIp: 0.0.0.0/0     # DNS TCP

        - IpProtocol: udp
          FromPort: 53
          ToPort: 53
          CidrIp: 0.0.0.0/0     # DNS UDP

        - IpProtocol: tcp
          FromPort: 1433
          ToPort: 1433
          CidrIp: 0.0.0.0/0     # MSSQL

        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 0.0.0.0/0     # PostgreSQL

        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0     # MySQL

        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0     # RDP

        - IpProtocol: tcp
          FromPort: 1514
          ToPort: 1514
          CidrIp: 0.0.0.0/0     # OSSEC

        - IpProtocol: tcp
          FromPort: 9200
          ToPort: 9300
          CidrIp: 0.0.0.0/0     # Elasticsearch cluster ports


  VPCFlowLogs:
    Type: AWS::EC2::FlowLog
    Properties:
      ResourceId: !Ref VPC
      ResourceType: VPC
      TrafficType: REJECT             
      LogDestinationType: s3
      LogDestination: !Sub arn:aws:s3:::${FlowLogsBucketName}
      MaxAggregationInterval: 600 


  PublicInstanceAZ1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-068c0051b15cdb816       
      InstanceType: t2.micro
      KeyName: polystudent-keypair          
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds:
        - !Ref IngressSecurityGroup
      IamInstanceProfile: !Ref LabRole
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: false
            VolumeSize: 20

  PublicInstanceAZ2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-068c0051b15cdb816
      InstanceType: t2.micro
      KeyName: polystudent-keypair
      SubnetId: !Ref PublicSubnet2
      SecurityGroupIds:
        - !Ref IngressSecurityGroup
      IamInstanceProfile: !Ref LabRole
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: false
            VolumeSize: 20

  PrivateInstanceAZ1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-068c0051b15cdb816
      InstanceType: t2.micro
      KeyName: polystudent-keypair
      SubnetId: !Ref PrivateSubnet1
      SecurityGroupIds:
        - !Ref IngressSecurityGroup
      IamInstanceProfile: !Ref LabRole
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: false
            VolumeSize: 20

  PrivateInstanceAZ2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-068c0051b15cdb816
      InstanceType: t2.micro
      KeyName: polystudent-keypair
      SubnetId: !Ref PrivateSubnet2
      SecurityGroupIds:
        - !Ref IngressSecurityGroup
      IamInstanceProfile: !Ref LabRole
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: false
            VolumeSize: 20

  PublicInstanceAZ1NetworkPacketsInAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: "Alarm if network packets in > 1000 pkts/sec on PublicInstanceAZ1"
      Namespace: "AWS/EC2"
      MetricName: "NetworkPacketsIn"
      Statistic: "Average"
      Period: 60
      EvaluationPeriods: 1
      Threshold: 1000
      ComparisonOperator: "GreaterThanThreshold"
      TreatMissingData: "notBreaching"
      Dimensions:
        - Name: InstanceId
          Value: !Ref PublicInstanceAZ1

  PublicInstanceAZ2NetworkPacketsInAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: "Alarm if network packets in > 1000 pkts/sec on PublicInstanceAZ2"
      Namespace: "AWS/EC2"
      MetricName: "NetworkPacketsIn"
      Statistic: "Average"
      Period: 60
      EvaluationPeriods: 1
      Threshold: 1000
      ComparisonOperator: "GreaterThanThreshold"
      TreatMissingData: "notBreaching"
      Dimensions:
        - Name: InstanceId
          Value: !Ref PublicInstanceAZ2

  PrivateInstanceAZ1NetworkPacketsInAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: "Alarm if network packets in > 1000 pkts/sec on PrivateInstanceAZ1"
      Namespace: "AWS/EC2"
      MetricName: "NetworkPacketsIn"
      Statistic: "Average"
      Period: 60
      EvaluationPeriods: 1
      Threshold: 1000
      ComparisonOperator: "GreaterThanThreshold"
      TreatMissingData: "notBreaching"
      Dimensions:
        - Name: InstanceId
          Value: !Ref PrivateInstanceAZ1

  PrivateInstanceAZ2NetworkPacketsInAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: "Alarm if network packets in > 1000 pkts/sec on PrivateInstanceAZ2"
      Namespace: "AWS/EC2"
      MetricName: "NetworkPacketsIn"
      Statistic: "Average"
      Period: 60
      EvaluationPeriods: 1
      Threshold: 1000
      ComparisonOperator: "GreaterThanThreshold"
      TreatMissingData: "notBreaching"
      Dimensions:
        - Name: InstanceId
          Value: !Ref PrivateInstanceAZ2


Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC

  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]

  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]

  PublicSubnet1Out:
    Description: A reference to the public subnet in Availability Zone 1
    Value: !Ref PublicSubnet1

  PublicSubnet2Out:
    Description: A reference to the public subnet in Availability Zone 2
    Value: !Ref PublicSubnet2

  PrivateSubnet1Out:
    Description: A reference to the private subnet in Availability Zone 1
    Value: !Ref PrivateSubnet1

  PrivateSubnet2Out:
    Description: A reference to the private subnet in Availability Zone 2
    Value: !Ref PrivateSubnet2
